--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{display:flex;justify-content:center;align-items:center;background-color:#12
 /* 🔹 واجهة الـ QR */
 #overlay{position:fixed;inset:0;background:#000d;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:999;opacity:0;transition:opacity 0.5s ease;}
 #overlay.show{opacity:1;}
-video{width:300px;height:220px;border-radius:10px;border:2px solid #10b981;background:#000;object-fit:cover;transform:scaleX(-1);}
+video{width:300px;height:220px;border-radius:10px;border:2px solid #10b981;background:#000;object-fit:cover}
 #message{margin-top:10px;font-size:1.1em;text-align:center;}
 .container{display:none;flex-direction:column;justify-content:center;align-items:center;width:100%;max-width:600px;margin:auto;}
 .selection-container,.content-container{background-color:#1e1e1e;padding:20px;border-radius:10px;box-shadow:0 0 15px rgba(0,0,0,0.5);width:100%;}
