--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body{display:flex;justify-content:center;align-items:center;background-color:#12
 #overlay.show{opacity:1;}
 video{width:300px;height:220px;border-radius:10px;border:2px solid #10b981;background:#000;object-fit:cover}
 #message{margin-top:10px;font-size:1.1em;text-align:center;}
-.container{display:none;flex-direction:column;justify-content:center;align-items:center;width:100%;max-width:600px;margin:auto;}
+.container{display:none;flex-direction:column;justify-content:center;align-items:center;width:100%;max-width:600px;margin:auto; /* Scollbar if needed */ overflow-y: auto; max-height: 95vh;}
 .selection-container,.content-container{background-color:#1e1e1e;padding:20px;border-radius:10px;box-shadow:0 0 15px rgba(0,0,0,.5);width:100%;}
 .selection-container h2,.content-container h2{text-align:center;padding-bottom:10px;}
 .contents{display:flex;justify-content:center;flex-wrap:wrap;}
@@ -39,6 +39,71 @@ video{width:300px;height:220px;border-radius:10px;border:2px solid #10b981;backg
   background:#e74c3c;color:white;border:none;padding:8px 20px;border-radius:10px;cursor:pointer;font-size:1em;margin-top:15px;
 }
 #sessionPopupContent button:hover{background:#c0392b;}
+
+/* إضافات للمواد و PDF */
+.materials{display:flex;justify-content:center;flex-wrap:wrap;gap:15px;margin-top:15px;}
+.material-btn{width:90px;height:90px;background:#10b981;color:#fff;font-weight:bold;border-radius:10px;display:flex;justify-content:center;align-items:center;text-align:center;cursor:pointer;font-size:0.9em;}
+.material-btn:hover{background:#0f9c6e;}
+.pdf-container{position:fixed;inset:0;background:#000d;display:none;flex-direction:column;align-items:center;justify-content:center;z-index:3000;padding:10px;}
+.pdf-container iframe{width:100%;height:90%;border:none;border-radius:10px;}
+.pdf-close-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border: none;
+  padding: 40px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 4000; /* رفع فوق iframe و pop-out */
+  pointer-events: auto; /* التأكد أن الزر قابل للنقر */
+}
+.pdf-close-btn:hover{background:rgba(0, 0, 0, 0.7);}
+
+/* === CSS جديد للخانَات الصغيرة === */
+
+
+
+.subject-section {
+  margin-top: 20px;
+  width: 100%;
+}
+.subject-section h3 {
+  text-align: center;
+  color: #10b981; /* Match the theme */
+  margin-bottom: 10px;
+  font-family: "IBM Plex Sans Arabic", sans-serif; /* Match other Arabic fonts */
+}
+.pdf-grid {
+  display: grid;
+  /* خانات بعرض 80 بكسل كحد أدنى، وتملأ المساحة المتاحة */
+  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr)); 
+  gap: 10px;
+  justify-content: center;
+}
+.pdf-box {
+  width: 80px;  /* عرض ثابت */
+  height: 60px; /* ارتفاع ثابت */
+  background: #333;
+  color: #f1f1f1;
+  border: 1px solid #10b981;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  font-size: 0.85em;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+.pdf-box:hover {
+  background-color: #10b981;
+  color: #000;
+}
+/* === نهاية CSS الجديد === */
+
 </style>
 </head>
 <body>
@@ -74,22 +139,71 @@ video{width:300px;height:220px;border-radius:10px;border:2px solid #10b981;backg
       <a href="#" class="btn" onclick="goToPage('contentS1')">S1</a>
       <a href="#" class="btn" onclick="goToPage('contentS2')">S2</a>
     </div>
-    <div class="stats">
-      <div>الزوار الآن: <span id="onlineCount">--</span></div>
-      <div>الزوار منذ إنشاء الموقع: <span id="totalVisitors">--</span></div>
-    </div>
   </div>
 
-  <div class="content-container" id="contentS1" style="display:none;">
+    <div class="content-container" id="contentS1" style="display:none;">
     <h2>🇵🇸 Semestre 1</h2>
     <button class="btn" onclick="returnToSelection()">RETOUR</button>
-    <button class="myword1">سبحان الله و الحمد لله و لا اله الا الله و الله أكبر</button>
-  </div>
+    
+    <div class="subject-section">
+      <h3>رياضيات</h3>
+      <div class="pdf-grid">
+<div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/1SOvG9-Tzdl7LF-Z0rxYJ0KRw5w3Rxt3j/preview?embedded=true')">PDF 1</div>        
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-3/view?embedded=true')">PDF 3</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-4/view?embedded=true')">PDF 4</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-5/view?embedded=true')">PDF 5</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-6/view?embedded=true')">PDF 6</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-7/view?embedded=true')">PDF 7</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-8/view?embedded=true')">PDF 8</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-9/view?embedded=true')">PDF 9</div>
+      </div>
+    </div>
 
-  <div class="content-container" id="contentS2" style="display:none;">
+    <div class="subject-section">
+      <h3>فيزياء</h3>
+      <div class="pdf-grid">
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-2/view?embedded=true')">PDF 2</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-3/view?embedded=true')">PDF 3</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-4/view?embedded=true')">PDF 4</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-5/view?embedded=true')">PDF 5</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-6/view?embedded=true')">PDF 6</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-7/view?embedded=true')">PDF 7</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-8/view?embedded=true')">PDF 8</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-9/view?embedded=true')">PDF 9</div>
+      </div>
+    </div>
+
+    <div class="subject-section">
+      <h3>كيمياء</h3>
+      <div class="pdf-grid">
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-1/view?embedded=true')">PDF 1</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-2/view?embedded=true')">PDF 2</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-3/view?embedded=true')">PDF 3</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-4/view?embedded=true')">PDF 4</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-5/view?embedded=true')">PDF 5</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-6/view?embedded=true')">PDF 6</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-7/view?embedded=true')">PDF 7</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-8/view?embedded=true')">PDF 8</div>
+        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/CHEM-9/view?embedded=true')">PDF 9</div>
+      </div>
+    </div>
+
+  </div>
+    <div class="content-container" id="contentS2" style="display:none;">
     <h2>🇵🇸 Semestre 2</h2>
     <button class="btn" onclick="returnToSelection()">RETOUR</button>
+    <div class="materials">
+      <div class="material-btn" onclick="openPDF('https://drive.google.com/file/d/4jkl/view?embedded=true')">إلكترونيات</div>
+      <div class="material-btn" onclick="openPDF('https://drive.google.com/file/d/5mno/view?embedded=true')">ميكانيك</div>
+      <div class="material-btn" onclick="openPDF('https://drive.google.com/file/d/6pqr/view?embedded=true')">هندسة مدنية</div>
+    </div>
   </div>
+</div>
+
+<div class="pdf-container" id="pdfContainer">
+  <button class="pdf-close-btn" onclick="closePDF()">رجوع</button>
+  <iframe id="pdfFrame" src=""></iframe>
 </div>
 
 <script src="https://unpkg.com/jsqr/dist/jsQR.js"></script>
@@ -119,13 +233,13 @@ const overlay = document.getElementById('overlay');
 const loader = document.getElementById('loader');
 const message = document.getElementById('message');
 const content = document.getElementById('content');
-const onlineCountEl = document.getElementById('onlineCount');
-const totalVisitorsEl = document.getElementById('totalVisitors');
 const manualCodeInput = document.getElementById('manualCodeInput');
 const manualCodeBtn = document.getElementById('manualCodeBtn');
 const fileInput = document.getElementById('fileInput');
 const sessionPopup = document.getElementById("sessionPopup");
 const popupBtn = document.getElementById("popupBtn");
+const pdfContainer = document.getElementById('pdfContainer');
+const pdfFrame = document.getElementById('pdfFrame');
 
 let scanning = false;
 let streamRef = null;
@@ -274,18 +388,6 @@ function startHeartbeat(deviceId){
 }
 function stopHeartbeat(){ if(heartbeatIntervalId) clearInterval(heartbeatIntervalId); heartbeatIntervalId=null; }
 
-/* realtime watcher & counters */
-function startSessionsWatcherAndCounters() {
-  onValue(ref(db,'sessions'), snap => {
-    const val=snap.val()||{};
-    let onlineCount=0;
-    Object.values(val).forEach(v=>{ if(v?.online) onlineCount++; });
-    set(ref(db,'counters/online'),onlineCount).catch(()=>{});
-    onlineCountEl.textContent=onlineCount;
-  });
-  onValue(ref(db,'counters/totalVisitors'), snap=>{ totalVisitorsEl.textContent=snap.val()||0; });
-}
-
 /* متابعة مستمرة للجلسة */
 async function startRealtimeSessionWatcher(){
   const savedCode=localStorage.getItem("qr_code_value");
@@ -299,7 +401,7 @@ async function startRealtimeSessionWatcher(){
       localStorage.removeItem("qr_access_granted");
       localStorage.removeItem("qr_code_value");
       stopHeartbeat();
-      updateSessionOffline(); // تحديث exitAt عند انتهاء الكود
+      updateSessionOffline();
     }
   });
 }
@@ -310,14 +412,12 @@ popupBtn.onclick=()=> location.reload();
 /* init */
 (async()=>{
   const deviceId=await getDeviceFingerprint(); deviceIdGlobal=deviceId;
-  startAllowedCodesWatcher(); startSessionsWatcherAndCounters();
+  startAllowedCodesWatcher();
   setTimeout(async()=>{
     const savedCode=localStorage.getItem("qr_code_value");
     if(savedCode){
       const snap=await get(ref(db,"codes/"+savedCode));
       if(snap.exists() && snap.val().usedBy===deviceId){
-        const sessionSnap=await get(ref(db,`sessions/${deviceId}`));
-        if(!sessionSnap.exists()) await set(ref(db,`sessions/${deviceId}`),{code:savedCode,deviceName:getDeviceName(),location:null,enteredAt:Date.now(),online:true,lastSeen:null,lastHeartbeat:Date.now(),exitAt:null});
         loader.style.display="none"; overlay.style.display="none"; content.style.display="flex";
         startRealtimeSessionWatcher(); startHeartbeat(deviceId); return;
       }
@@ -327,8 +427,15 @@ popupBtn.onclick=()=> location.reload();
 })();
 
 /* navigation */
-window.goToPage=function(pageId){ document.querySelectorAll('.content-container').forEach(c=>c.style.display='none'); document.getElementById('selectionContainer').style.display='none'; document.getElementById(pageId).style.display='block'; };
-window.returnToSelection=function(){ document.querySelectorAll('.content-container').forEach(c=>c.style.display='none'); document.getElementById('selectionContainer').style.display='block'; };
+window.goToPage=function(pageId){
+  document.querySelectorAll('.content-container').forEach(c=>c.style.display='none');
+  document.getElementById('selectionContainer').style.display='none';
+  document.getElementById(pageId).style.display='block';
+};
+window.returnToSelection=function(){
+  document.querySelectorAll('.content-container').forEach(c=>c.style.display='none');
+  document.getElementById('selectionContainer').style.display='block';
+};
 
 /* تحديث الجلسة عند الخروج */
 async function updateSessionOffline(){
@@ -342,6 +449,18 @@ window.addEventListener("unload", updateSessionOffline);
 
 /* تحقق من كلمة المرور اليدوية */
 manualCodeBtn.onclick = async ()=>{ const code = manualCodeInput.value.trim(); if(code) await handleScannedCode(code); };
+
+/* PDF */
+// --- يجب تعريف هذه الدوال في النطاق العام (window) ---
+window.openPDF=function(url){
+  pdfFrame.src=url;
+  pdfContainer.style.display='flex';
+}
+window.closePDF=function(){
+  pdfContainer.style.display='none';
+  pdfFrame.src='';
+}
 </script>
+
 </body>
 </html>
