--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ color: #f1f1f1; /* تعديل */
       <h3 onclick="togglePdfList('phys-grid')">فيزياء <span>▼</span></h3>
       <div class="pdf-grid" id="phys-grid" style="display: none;">
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
+                <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-2/view?embedded=true')">PDF 2</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-3/view?embedded=true')">PDF 3</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-4/view?embedded=true')">PDF 4</div>
