--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ color: #f1f1f1; /* تعديل */
       <h3 onclick="togglePdfList('math-grid')">رياضيات <span>▼</span></h3>
       <div class="pdf-grid" id="math-grid" style="display: none;">
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/1SOvG9-Tzdl7LF-Z0rxYJ0KRw5w3Rxt3j/preview?embedded=true')">PDF 1</div>        
+                <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
 
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-4/view?embedded=true')">PDF 4</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/MATH-5/view?embedded=true')">PDF 5</div>
@@ -243,6 +244,8 @@ color: #f1f1f1; /* تعديل */
       <div class="pdf-grid" id="phys-grid" style="display: none;">
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
                 <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
+                        <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-1/view?embedded=true')">PDF 1</div>
+
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-2/view?embedded=true')">PDF 2</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-3/view?embedded=true')">PDF 3</div>
         <div class="pdf-box" onclick="openPDF('https://drive.google.com/file/d/PHYS-4/view?embedded=true')">PDF 4</div>
